--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import './base/fonts';
 
 body {
+    // position: relative;
     font-family: 'Hind', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -69,12 +70,48 @@ h2 {
     font-family: 'Kalam', cursive;
     font-size: 34px;
     font-weight: 700;
+    transition: color 150ms linear;
     color: #504949e3;
 }
 
+.logo.is-open {
+    position: relative;
+    color: white;
+    z-index: 1;
+}
+
 //menu
-.menu {
-    
+.backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity 250ms linear;
+    background-color: rgba(0, 0, 0, 0.493);
+    pointer-events: none;
+
+    .menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 180px;
+        transform: translateX(-180px);
+        transition: transform 250ms linear;
+        background-color: #221f1f;
+        z-index: 1;
+    }
+}
+
+.menu.is-open {
+    transform: translateX(0);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    pointer-events: all;
 }
 
 //matrix
