Разбито на паршалы

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,227 +1,6 @@
 @import './utils/mixin';
 @import './base/fonts';
-
-body {
-    // position: relative;
-    font-family: 'Hind', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.86;
-    letter-spacing: 0.01em;
-    color: black;
-}
-
-h2 {
-    margin: 0;
-}
-
-.list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.link {
-    text-decoration: none;
-}
-
-.btn {
-    padding: 5px;
-    margin: 0;
-    border: none;
-    background-color: transparent;
-}
-
-.container {
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-
-    @include for-size(mobile) {
-        width: 480px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    @include for-size(tablet) {
-        width: 768px;
-    }
-
-    @include for-size(desktop) {
-        width: 1200px;
-    }
-}
-
-
-
-// header
-.page-header {
-    padding: 10px 0 10px 0;
-    background-color: #cae5f7;
-}
-
-.container-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.icon-menu {
-    width: 35px;
-    height: 35px;
-    fill: #0000009c;
-}
-
-.logo {
-    font-family: 'Kalam', cursive;
-    font-size: 34px;
-    font-weight: 700;
-    transition: color 150ms linear;
-    color: #504949e3;
-}
-
-.logo.is-open {
-    position: relative;
-    color: white;
-    z-index: 1;
-}
-
-//menu
-.backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 0;
-    transition: opacity 250ms linear;
-    background-color: rgba(0, 0, 0, 0.493);
-    pointer-events: none;
-}
-
-.menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    padding: 70px 30px 0 30px;
-    width: 50%;
-    transform: translateX(-100%);
-    transition: transform 250ms linear;
-    background-color: #221f1f;
-    z-index: 1;
-
-    .close-btn {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 35px;
-        height: 35px;
-        border-radius: 50%;
-        border: none;
-        background-color: gray;
-
-        .icon-cross {
-            width: 25px;
-            height: 25px;
-            fill: white;
-        }
-    }
-}
-
-.menu.is-open {
-    transform: translateX(0);
-}
-
-.backdrop.is-open {
-    opacity: 1;
-    pointer-events: all;
-}
-
-.menu-list {
-
-    .menu-link {
-        font-size: 16px;
-        font-weight: 600;
-        color: white;
-    }
-}
-
-//matrix
-.section-matrix {
-    padding: 60px 0 60px 0;
-}
-
-.table {
-    padding: 0 20px 0 0;
-
-    .tr {
-        display: flex;
-        justify-content: center;
-    }
-}
-
-.th-null {
-    width: 30px;
-    height: 30px;
-}
-
-.th-top {
-    width: 150px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.th-left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 150px;
-}
-
-.caption {
-    white-space: nowrap;
-    font-size: 15px;
-
-    &.left {
-        transform: rotate(-90deg);
-    }
-}
-
-.td {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    border: 1px solid black;
-
-    &.pink {
-        background-color: #FFD7D7;
-    }
-
-    &.green {
-        background-color: #D6FFD7;
-    }
-
-    &.yellow {
-        background-color: #FEFFD7;
-    }
-
-    &.gray {
-        background-color: #DCDCB6;
-    }
-
-    .link-matrix {
-        font-size: 16px;
-        font-weight: 700;
-        color: black;
-    }
-}
+@import './base/common';
+@import './components/header';
+@import './components/menu';
+@import './layouts/matrix';
