Создана форма, страничка Сделать, кривой локал стор исправить

--- a/src/sass/layouts/main-page/_matrix.scss
+++ b/src/sass/layouts/main-page/_matrix.scss
@@ -65,9 +65,14 @@
         background-color: #DCDCB6;
     }
 
-    .link-matrix {
+    .block-text {
         font-size: 16px;
         font-weight: 700;
         color: black;
     }
+}
+
+.link-matrix {
+    display: inline-block;
+    color: black;
 }
