--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,4 +3,6 @@
 @import './base/common';
 @import './components/header';
 @import './components/menu';
-@import './layouts/matrix';
+@import './components/btn-back';
+@import './components/form';
+@import './layouts/layouts';
