--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -8,6 +8,10 @@ body {
     color: black;
 }
 
+.body-make {
+    background-color: #2161551a;
+}
+
 h2 {
     margin: 0;
 }
@@ -16,6 +20,12 @@ h2 {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .link {
